# gnucash-web

./: .gitignore  .gitmodules  Dockerfile  README.md  README.org  app.py  auth.py  config.py  docker-compose-postgres.yml  docker-compose.yml  errors.py  gnucash_web.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: docker-publish.yml
docker/: Dockerfile  config.py  uwsgi.ini
gnucash_web/: __init__.py  auth.py  book.py  commodities.py
gnucash_web/config/: __init__.py  default.py
gnucash_web/static/: gnucash-web.css  gnucash-web.js  selectize
gnucash_web/templates/: account.j2  base.j2  error_account_not_found.j2  error_database_locked.j2  forms.j2  login.j2  transaction.j2  user.j2
gnucash_web/utils/: gnucash.py  jinja.py
sample/: sample.sqlite
src/: requirements.txt  setup.py
src/encrypted_session/: __init__.py
src/gnucash_web/: __init__.py  auth.py  book.py  budget.py
src/gnucash_web/config/: default.py
src/gnucash_web/static/: bootstrap  bootstrap-icon-font  gnucash-web.css
src/gnucash_web/static/img/: official
src/gnucash_web/templates/: account.html  account.j2  base.html  base.j2  budget.html  budgets.html  error_account_not_found.html  error_database_locked.html  forms.html  forms.j2  login.html  login.j2  transaction.html  transaction.j2  user.html
src/gnucash_web/utils/: gnucash.py  jinja.py
static/: bootstrap  gnucash-web.css
static/img/: official
templates/: account.j2  accounts.j2  base.j2  error_account_not_found.j2  login.j2  transaction.j2  user.j2
utils/: jinja.py
