[tool.poetry]
name = "gnucash-web"
version = "0.1.0"
description = ""
authors = ["Joshua Bachmeier", "Jayen Ashar", "Fredrik Falk", "Trevor Reed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
babel = "2.9.1"
flask = "2.2.5"
mysql = "0.0.3"
mysqlclient = "2.2.0"
piecash = "1.2.0"
psycopg2 = "2.9.9"
pycryptodome = "3.18.0"
requests = "2.27.1"
werkzeug = "2.3.7"
pandas = "^2.1.4"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
